k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chatapp
spec:
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
